--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
     background-attachment: fixed;
 }
 
+.main{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
 .load_questions {
     display: grid;
     /* display: none; */
@@ -28,6 +34,44 @@ body {
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
+}
+
+.block_teleport{
+    display: none;
+    background-color: gray;
+    /* display: grid; */
+    grid-template-rows: 20% 80%;
+    width: 275px;
+    height: 300px;
+    position: absolute;
+    left: 77%;
+    top: 30%;
+}
+
+.block_teleport_head{
+    display: grid;
+    grid-template-rows: 50% 50%;
+}
+
+.block_teleport_body{
+    text-align: center;
+    display: grid;
+    gap: 3px;
+    align-items: center;
+    /* grid-template-columns: repeat(16,1fr); */
+    /* grid-template-rows: repeat(9,1fr); */
+}
+
+.quest_num{
+    border: 1px solid;
+}
+.quest_num:hover{
+    background-color: yellow;
+}
+
+.quest_num:active{
+    background-color: white;
+    opacity: 0.5;
 }
 
 .block_questions {
